--- a/CH3_No4_HW.vcxproj
+++ b/CH3_No4_HW.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d97f58bd-2697-4773-a34e-bd9f5d679c0e}</ProjectGuid>
     <RootNamespace>CH3No4HW</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>CH2_No4_HW</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
